2006-06-11 (r12)

* Added possibility to throw an exception, based on code by Justin DeWind

* Added Evan Doll's bugfix, which forwards conformsToProtocol: methods when necessary

* Added the ability to match struct arguments, based on code contributed by Daniel Eggert

* Better description of arguments, based on code contributed by Jeremy Higgs

* Added the ability to create multiple identical expectations on the mock object (Jeremy Higgs)

* Added the ability to mock out nil arguments (Jeremy Higgs)


2005-12-11 (r11)

* Added slightly modified version of Jon Reid's contribution, which adds the possibility to stub 
  primitive return values.

* Added Jon Reid's bugfix that prevents a crash when trying to stub an unknown method on a 
  protocol.


2005-10-03 (r10)

* Upgraded to build and run tests using the OCUnit that is now part of XCode.


2005-10-03 (r9)

* Added XCdoe 2.1 project


2005-02-16 (r8)

* Added Richard Clark's contribution, which provides support for scalar arguments.


2005-02-13 (r7)

* Added support for mocking formal protocols


2004-08-26 (r6)

* MockObject and Recorder now inherit from NSProxy.
